# visual-attention

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  CODE_REVIEW.md  DEBUGGING.md  DEBUGGING_IMPLEMENTATION.md  DEBUG_REFACTORING.md  LICENSE  README.md  config.yaml  test_ior.yaml
.github/workflows/: ci.yml
configs/: alternative.yaml  attend.yaml  classic_parameters.yaml  default.yaml  find_red.yaml  kalman.yaml  live.yaml  modern.yaml  normalization.yaml  phase1_simple.yaml  stereo.yaml  thesis.yaml
data/: README.md
data/samples/: README.md
docs/: ALTERNATIVE_FEATURES.md  ARCHITECTURE.md  CLAUDE.md  CODE_ASSESSMENT.md  CODE_STYLE.md  DEVELOPMENT_GUIDELINES.md  DYNAMIC_IOR_STUDY.md  FORMATTING.md  GATED_RECOGNITION.md  INTERCHANGE_FORMAT.md  MIGRATION_GUIDE.md  MODERN_ARCHITECTURE.md  MODERN_ATTENTION_RESEARCH.md  PERFORMANCE.md  PHASE1_ACTION_PLAN.md  PRIORITY_MAP.md  REALISTIC_TIMELINE.md  RESEARCH_POSITIONING.md  SELECTION_BACKENDS.md  SYMMETRY_FEATURE_NOTES.md  V2_ROADMAP.md  V3_ROADMAP.md  VLM_FRONT_END.md  thesis_vs_modern.md
docs/adr/: 0001-cpp-core-python-eval.md  0002-registry-config-driven-strategies.md  0003-file-interchange-not-ffi.md  0004-ior-ablation-honest-negative-result.md  README.md
docs/progress/: weekly_log.md
eval/: README.md  coco_search.py  compare_scanpath_json.py  compare_scanpaths.py  dynamic_ior.py  gated_recognition.py  plot_gated_recognition.py  plot_priority_search.py  plot_vlm_frontend.py  priority_search.py  report_thesis_vs_modern.py  requirements.txt  study_common.py  vlm_backends.py  vlm_frontend.py
eval/attention_eval/: __init__.py  benchmark.py  io.py  metrics.py  plots.py  report.py  scanpath.py
eval/attention_eval/models/: __init__.py  __main__.py  base.py  center_bias.py  deepgaze.py  spectral_residual.py
eval/datasets/: __init__.py  cocosearch18.py  davis2017.py  middlebury.py  mit1003.py  vstar.py
eval/tests/: test_benchmark.py  test_dynamic_ior.py  test_metrics.py  test_models.py  test_scanpath.py
examples/: debug_color.cpp  pipeline_test.cpp
include/attention/config/: config_loader.h  yaml_reader.h
include/attention/core/: constants.h  feature_map.h  frame.h  run_state.h  saliency_map.h
include/attention/features/: boolean_map_feature.h  color_feature.h  debug_context.h  eccentricity_feature.h  feature_extractor.h  feature_registry.h  frequency_tuned_feature.h  image_signature_feature.h  intensity_feature.h  minimum_barrier_feature.h  onset_feature.h  orientation_feature.h  phase_spectrum_feature.h  spectral_residual_feature.h  stereo_feature.h  symmetry_feature.h
include/attention/fusion/: fusion_strategy.h  priority_map.h
include/attention/io/: result_writer.h  scanpath_writer.h
include/attention/pipeline/: attention_pipeline.h  frame_source.h
include/attention/selection/: kalman_mot_selection.h  neural_field_3d.h  neural_field_selection.h  normalization_selection.h  selection_strategy.h
include/attention/system/: attention_system.h  behavior.h  live_demonstrator.h  object_file.h  processor.h
include/attention/visualization/: visualizer.h
reference/old_code/: README.md  attention.h  esab2.C  nf.h  nf2d.h  nf3d.h  readargs.h
reference/old_code/feature/: color.C  color.h  eccentricity.C  eccentricity.h  onset.h  stereo.C  stereo.h  symmetry.C  symmetry.h
src/: main.cpp
src/config/: config_loader.cpp
src/core/: frame.cpp
src/features/: boolean_map_feature.cpp  color_feature.cpp  debug_context.cpp  eccentricity_feature.cpp  feature_registry.cpp  frequency_tuned_feature.cpp  image_signature_feature.cpp  intensity_feature.cpp  minimum_barrier_feature.cpp  onset_feature.cpp  orientation_feature.cpp  phase_spectrum_feature.cpp  spectral_residual_feature.cpp  stereo_feature.cpp  symmetry_feature.cpp
src/fusion/: fusion.cpp  priority_map.cpp
src/io/: result_writer.cpp  scanpath_writer.cpp
src/pipeline/: attention_pipeline.cpp  frame_source.cpp
src/selection/: kalman_mot_selection.cpp  neural_field_3d.cpp  neural_field_selection.cpp  normalization_selection.cpp  selection.cpp
src/system/: attention_system.cpp  behavior.cpp  live_demonstrator.cpp  object_file.cpp  processor.cpp
src/visualization/: visualizer.cpp
tests/: CMakeLists.txt  test_alt_features.cpp  test_characterization.cpp  test_config.cpp  test_kalman_mot.cpp  test_normalization.cpp  test_priority.cpp  test_processors.cpp  test_recognition.cpp  test_selection.cpp  test_stereo_onset.cpp  test_system.cpp
tests/golden/attend/: scanpath.json
tests/golden/input/: result.json
tests/golden/inputc/: result.json
tests/golden/stereo/: result.json
tests/golden/thesis_inputc/: result.json
tools/: fetch_models.py  make_dynamic_scene.py  make_synthetic_sequence.py  make_synthetic_stereo.py
